Reduced number of nanoparticles generated

--- a/script/annealS2.in
+++ b/script/annealS2.in
@@ -31,7 +31,6 @@ neigh_modify    delay 10 check yes  # Wait 10 steps after building, build only w
 # --------------- SETTINGS ---------------
 thermo          {S2_THER_INT}  # Thermodynamic output frequency
 thermo_style    custom step time temp press pe ke etotal
-fix             timeLimit all halt 1000 tlimit > {TIME_LIMIT} error soft message yes  # Continue with next part if time limit exceeded
 fix             zeroMomentum all momentum 1 linear 1 1 1 angular rescale  # Reset linear & angular momenta to 0 every step
 
 # --------------- SIMULATION RUNS --------------- 
@@ -61,7 +60,7 @@ shell           cd ../
 jump            {INP_FILE_NAME}S2.in
 
 # --------------- OVERALL DONE ---------------
-shell           rm {INP_FILE_NAME}S1.mpiio.lmp
+shell           rm {INP_FILE_NAME}S1.mpiio.xyz
 print           ""
 print           "ALL DONE!"
 print           "------------------------------------------------------------------------------------------------------------------------------"
