--- a/script/annealS1.in
+++ b/script/annealS1.in
@@ -18,11 +18,10 @@ neigh_modify    delay 10 check yes  # Wait 10 steps after building, build only w
 # --------------- SETTINGS ---------------
 thermo          {S1_THER_INT}  # Thermodynamic output frequency
 thermo_style    custom step time temp press pe ke etotal
-fix             timeLimit all halt 1000 tlimit > {TIME_LIMIT} error soft message yes  # Continue with next part if time limit exceeded
 fix             zeroMomentum all momentum 1 linear 1 1 1 angular rescale  # Reset linear & angular momenta to 0 every step
 fix             nhS1 all nvt temp {INIT_TEMP} {HEAT_TEMP} $(100.0*dt)
 dump            dumpS1 all custom/mpiio {S1_DUMP_INT} {INP_FILE_NAME}S1.*.mpiio.lmp id type element x y z
-dump_modify     dumpS1 element {ELEMENT1} {ELEMENT2} {ELEMENT3} pad 8
+dump_modify     dumpS1 pad 8
 
 # --------------- SIMULATION RUNS --------------- 
 print           "--------------- HEATING TO {HEAT_TEMP} K ---------------"
