Included __pycache__ from FeatExtEng in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ InitStruct/__pycache__/
 InitStruct/*NP/
 InitStruct/*log*
 MDsim/*.log
+FeatExtEng/__pycache__/
 FeatExtEng/*.log
 FeatExtEng/NCPac/*.mod
